--- a/computational_modeling_hci-master/environment.yml
+++ b/computational_modeling_hci-master/environment.yml
@@ -3,8 +3,8 @@ channels:
   - conda-forge
   - kgullikson
 dependencies:
-  - python=3.6
-  - numpy=1.15.4
+  - python
+  - numpy
   - scipy
   - matplotlib
   - seaborn
